@@ -19,8 +19,8 @@
  */
 
 dependencies {
-  compile group: 'org.jgrapht', name: 'jgrapht-core', version: '0.9.0'
-  compile group: 'org.jgrapht', name: 'jgrapht-ext', version: '0.9.0'
+  compile group: 'org.jgrapht', name: 'jgrapht-core', version: '0.9.1-SNAPSHOT'
+  compile group: 'org.jgrapht', name: 'jgrapht-ext', version: '0.9.1-SNAPSHOT'
   compile group: 'riffle', name: 'riffle', version: '0.1-dev'
   compile group: 'org.codehaus.janino', name: 'janino', version: '2.7.6'
 
