@@ -2,6 +2,8 @@ Cascading Change Log
 
 3.0.0 [unreleased]
 
+  Updated jgrapht to 0.9.1 so that all internal graphs can be backed by a j.u.IdentityHashMap.
+
   Fixed issue where the Hadoop o.a.h.m.OutputFormat would be ignored during job configuration as configured by a custom
   c.s.Scheme that was not a o.a.h.m.FileOutputFormat sub-class. In such cases a o.a.h.m.l.NullOutputFormat would be
   erroneously set and passed to c.t.Tap#openForWrite().
